* Tue May 06 2025 Steven Pritchard <steve@sicura.us> - 6.9.0
- Cleanup for rubocop

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 6.8.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 6.7.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 6.6.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
- Add RockyLinux 8 support

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.1
- Removed EL6 support

* Wed Sep 02 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.0-0
- Added the following classes
  - polkit::install
  - polkit::service
  - polkit::user
- Ensure that the polkit user is managed by default and placed into the
  supplementary group bound to the 'gid' option on '/proc' if one is set to work
  around issues with 'hidepid' > 0.
- Made the entire main class inert on unsupported OSs and log a warning on the
  server that can be disabled

* Tue Dec 24 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Add EL8 support
- Drop EL6 support (it was non-functional)
- Fix issue with basic_policy template that resulted in malformed rules
- Add acceptance tests

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Sat Mar 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.1-0
- Add support for OEL and Puppet 5