@@ -27,21 +27,16 @@ class polkit (
   Boolean               $manage_polkit_user     = true,
   Polkit::PackageEnsure $package_ensure         = simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' }),
   Boolean               $warn_on_unsupported_os = true
-){
-  if simplib::module_metadata::os_supported( load_module_metadata($module_name), { 'release_match' => 'major' }) {
-    include polkit::install
-    include polkit::service
+) {
+  include polkit::install
+  include polkit::service
 
-    Class['polkit::install'] ~> Class['polkit::service']
+  Class['polkit::install'] ~> Class['polkit::service']
 
-    if $manage_polkit_user {
-      include polkit::user
+  if $manage_polkit_user {
+    include polkit::user
 
-      Class['polkit::install'] -> Class['polkit::user']
-      Class['polkit::user'] ~> Class['polkit::service']
-    }
-  }
-  elsif $warn_on_unsupported_os {
-    warning("${facts['os']['name']} ${facts['os']['release']['full']} is not supported by ${module_name}. To silence this warning, set ${module_name}::warn_on_unsupported_os to 'false'")
+    Class['polkit::install'] -> Class['polkit::user']
+    Class['polkit::user'] ~> Class['polkit::service']
   }
 }
