@@ -76,42 +76,38 @@ define polkit::local_authority (
   Polkit::Result                  $result_any       = undef,
   Polkit::Result                  $return_value     = undef
 ) {
+  include 'polkit'
 
-  # For backwards compatibility purposes, this defined type is inert if called from an unsupported OS
-  if simplib::module_metadata::os_supported( load_module_metadata($module_name), { 'release_match' => 'major' }) {
-    include 'polkit'
+  polkit::validate_identity($identity)
 
-    polkit::validate_identity($identity)
+  # Make the name safe
+  $_name = regsubst($name,'\/','_')
 
-    # Make the name safe
-    $_name = regsubst($name,'\/','_')
+  if !( $result_active or $result_inactive or $result_any ) {
+    fail('You must set at least one of "result_active", "result_inactive", or "result_any"')
+  }
 
-    if !( $result_active or $result_inactive or $result_any ) {
-      fail('You must set at least one of "result_active", "result_inactive", or "result_any"')
-    }
+  $authority_map = {
+    'vendor'    => '10-vendor.d',
+    'org'       => '20-org.d',
+    'site'      => '30-site.d',
+    'local'     => '50-local.d',
+    'mandatory' => '90-mandatory.d'
+  }
 
-    $authority_map = {
-      'vendor'    => '10-vendor.d',
-      'org'       => '20-org.d',
-      'site'      => '30-site.d',
-      'local'     => '50-local.d',
-      'mandatory' => '90-mandatory.d'
-    }
+  $target_file = "${target_directory}/${authority_map[$authority]}/${_name}.pkla"
 
-    $target_file = "${target_directory}/${authority_map[$authority]}/${_name}.pkla"
+  $_file_ensure = $ensure ? {
+    'absent' => 'absent',
+    default  => 'file'
+  }
 
-    $_file_ensure = $ensure ? {
-      'absent' => 'absent',
-      default  => 'file'
-    }
-
-    file { $target_file:
-      ensure  => $_file_ensure,
-      owner   => 'root',
-      group   => 'root',
-      mode    => '0644',
-      content => template("${module_name}/local_authority.erb"),
-      require => Package['polkit']
-    }
+  file { $target_file:
+    ensure  => $_file_ensure,
+    owner   => 'root',
+    group   => 'root',
+    mode    => '0644',
+    content => template("${module_name}/local_authority.erb"),
+    require => Package['polkit']
   }
 }
